...
      horizontalArrangement = Arrangement.SpaceBetween,
      verticalAlignment = Alignment.CenterVertically,
  ) {
    LargeIconButton(
        modifier = Modifier.weight(1f),
        iconId = R.drawable.ic_back_arrow,
        contentDescription = "go back",
    ) {
      onBackClick()
    }

    Row(
        modifier = Modifier.weight(weight = 3f).clickable { onFileNameClick() },
...
    }

    Button(
        onClick = onDraftClick,
        colors = ButtonDefaults.buttonColors().copy(containerColor = Color.White),
    ) {
      Text(text = "Draft", style = Typography.titleSmall)
    }
  }
}

